--- a/package.json
+++ b/package.json
@@ -74,14 +74,14 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.294.0",
     "motion": "^12.4.7",
-    "next": "^15.1.7",
+    "next": "15.1.9",
     "next-themes": "^0.2.1",
     "notion-to-md": "^3.1.5",
     "openai": "^4.85.4",
     "pg": "^8.13.3",
-    "react": "^19.0.0",
+    "react": "19.0.1",
     "react-day-picker": "^8.9.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.0.1",
     "react-hook-form": "^7.48.2",
     "react-markdown": "^9.1.0",
     "react-native": "^0.77.1",
@@ -109,7 +109,7 @@
     "@typescript-eslint/parser": "^8.25.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "15.1.9",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.9",
